force-app/main/default/objects/Opportunity/fields/Achieved_Rent_SAR__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Rent_SAR__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Rent SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>