force-app/main/default/objects/Opportunity/fields/Activity_Account__c.field-meta.xml
<CustomField>
    <fullName>Activity_Account__c</fullName>
    <formula>Account.Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>