force-app/main/default/objects/Opportunity/fields/Activity_Other__c.field-meta.xml
<CustomField>
    <fullName>Activity_Other__c</fullName>
    <label>Activity Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>