force-app/main/default/objects/Opportunity/fields/Approved_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealsApprovedBy</relationshipName>
    <type>Lookup</type>
</CustomField>