force-app/main/default/objects/Opportunity/fields/Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Area_Sqm__c</fullName>
    <label>Gross Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>