force-app/main/default/objects/Opportunity/fields/AreaAtCreation__c.field-meta.xml
<CustomField>
    <fullName>AreaAtCreation__c</fullName>
    <label>Area at Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>