force-app/main/default/objects/Opportunity/fields/Asking_Rate_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Asking_Rate_Sqm__c</fullName>
    <label>Asking Rate/Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>