force-app/main/default/objects/Opportunity/fields/Brand_Name_on_Shop__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_on_Shop__c</fullName>
    <label>Brand Name on Shop</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example 1</fullName>
            </value>
            <value>
                <fullName>Example 2</fullName>
            </value>
            <value>
                <fullName>Example 3</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>