force-app/main/default/objects/Opportunity/fields/BuildUpArea__c.field-meta.xml
<CustomField>
    <fullName>BuildUpArea__c</fullName>
    <label>Build Up Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>