force-app/main/default/objects/Opportunity/fields/BuildUpAreaAtCreation__c.field-meta.xml
<CustomField>
    <fullName>BuildUpAreaAtCreation__c</fullName>
    <label>Build up Area at Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>