force-app/main/default/objects/Opportunity/fields/Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>Business_Activity__c</fullName>
    <formula>Account.Business_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Activity</label>
    <type>Text</type>
</CustomField>