force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
                <color>#78C953</color>
                <label>Accessories</label>
            </value>
            <value>
                <fullName>Fashion Apparel</fullName>
                <color>#419249</color>
                <label>Fashion Apparel</label>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
                <color>#A845DC</color>
                <label>Food &amp; Beverage</label>
            </value>
            <value>
                <fullName>HIGH TECH</fullName>
                <color>#FF99FF</color>
                <label>HIGH TECH</label>
            </value>
            <value>
                <fullName>High Tech / Electronics</fullName>
                <color>#FF99FF</color>
                <label>High Tech / Electronics</label>
            </value>
            <value>
                <fullName>Neighborhood Retail</fullName>
                <color>#FF0000</color>
                <label>Neighborhood Retail</label>
            </value>
            <value>
                <fullName>Neighborhood Services</fullName>
                <color>#3366FF</color>
                <label>Neighborhood Services</label>
            </value>
            <value>
                <fullName>Specialty Retail</fullName>
                <color>#FF9900</color>
                <label>Specialty Retail</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>