force-app/main/default/objects/Opportunity/fields/Category_Other__c.field-meta.xml
<CustomField>
    <fullName>Category_Other__c</fullName>
    <label>Category Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>