force-app/main/default/objects/Opportunity/fields/Collected_SAR_Rent__c.field-meta.xml
<CustomField>
    <fullName>Collected_SAR_Rent__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collected SAR (Rent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>