force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>IF(Term_of_Lease_Years__c &gt; 0, Contract_Start_Date__c + (Term_of_Lease_Years__c *365),
IF(Term_of_Lease_Months__c &gt; 0,ADDMONTHS(Contract_Start_Date__c , Term_of_Lease_Months__c ),
IF(Term_of_Lease_Days__c &gt; 0,Contract_Start_Date__c + Term_of_Lease_Days__c ,
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>