force-app/main/default/objects/Opportunity/fields/Deal_Booked_Date_Notify__c.field-meta.xml
<CustomField>
    <fullName>Deal_Booked_Date_Notify__c</fullName>
    <formula>IF(
  OR(
    AND(
      Deal_Booked_Date__c = TODAY() + 1, /* tomorrow */
      NOT(OR(
          WEEKDAY(TODAY()) = 6, /* friday */
          WEEKDAY(TODAY()) = 7 /* saturday */
      ))
    ),
    AND(
      WEEKDAY(TODAY()) = 5, /* thursday */
      OR(
        Deal_Booked_Date__c = TODAY() + 1, /* friday */
        Deal_Booked_Date__c = TODAY() + 2, /* saturday */
								Deal_Booked_Date__c = TODAY() + 3 /* sunday */
      )
    ),
    AND(
      WEEKDAY(TODAY()) = 7, /* sunday */
      Deal_Booked_Date__c = TODAY() + 1 /* monday */
    )
  ),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Booked Date Notify</label>
    <type>Checkbox</type>
</CustomField>