force-app/main/default/objects/Opportunity/fields/Deal_Booked_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Booked_Paid_Date__c</fullName>
    <label>Deal Booked &amp; Paid Date</label>
    <type>Date</type>
</CustomField>