force-app/main/default/objects/Opportunity/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <displayFormat>D# {00000000}</displayFormat>
    <label>Deal Number</label>
    <type>AutoNumber</type>
</CustomField>