force-app/main/default/objects/Opportunity/fields/Deal_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Offered_Date__c</fullName>
    <label>Deal Offered Date</label>
    <type>Date</type>
</CustomField>