force-app/main/default/objects/Opportunity/fields/Deal_Unit_in_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Deal_Unit_in_Approval_Process__c</fullName>
    <label>Deal Unit in Approval Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>