force-app/main/default/objects/Opportunity/fields/DealId__c.field-meta.xml
<CustomField>
    <fullName>DealId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Id</label>
    <type>Text</type>
</CustomField>