force-app/main/default/objects/Opportunity/fields/Edara_Agent__c.field-meta.xml
<CustomField>
    <fullName>Edara_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>