force-app/main/default/objects/Opportunity/fields/Edara_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Edara_Agent_Commission__c</fullName>
    <defaultValue>000.03</defaultValue>
    <label>Agent Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>