force-app/main/default/objects/Opportunity/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <formula>Primary_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fax</label>
    <type>Text</type>
</CustomField>