force-app/main/default/objects/Opportunity/fields/LandArea__c.field-meta.xml
<CustomField>
    <fullName>LandArea__c</fullName>
    <label>Land Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>