force-app/main/default/objects/Opportunity/fields/LandAreaAtCreation__c.field-meta.xml
<CustomField>
    <fullName>LandAreaAtCreation__c</fullName>
    <description>This field stores the initial negotiated value for the Land Area</description>
    <label>Land Area at Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>