force-app/main/default/objects/Opportunity/fields/LandPriceAtCreation__c.field-meta.xml
<CustomField>
    <fullName>LandPriceAtCreation__c</fullName>
    <label>Land Price Per Sqm at Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>