force-app/main/default/objects/Opportunity/fields/LandPricePerSqm__c.field-meta.xml
<CustomField>
    <fullName>LandPricePerSqm__c</fullName>
    <label>Land Price Per Sqm</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>