force-app/main/default/objects/Opportunity/fields/LandSellableAmount__c.field-meta.xml
<CustomField>
    <fullName>LandSellableAmount__c</fullName>
    <label>Land Sellable Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>