force-app/main/default/objects/Opportunity/fields/Lease_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Commencement_Date__c</fullName>
    <inlineHelpText>Unit Handover Date</inlineHelpText>
    <label>Lease Commencement Date</label>
    <type>Date</type>
</CustomField>