force-app/main/default/objects/Opportunity/fields/Leasing_Assistance_Fee_SR__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Assistance_Fee_SR__c</fullName>
    <formula>IF( RecordType.Name =&apos;Offices&apos;,Total_Annual_Rent_SR_Annum__c*0.10,
IF( RecordType.Name =&apos;Retail&apos;,Total_Annual_Rent__c*0.10,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10%	of 1st year rent, In favor of D&amp;B GROUP.</inlineHelpText>
    <label>Leasing Assistance Fee (SR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>