force-app/main/default/objects/Opportunity/fields/Marketing_Promotion_SAR_Year__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Promotion_SAR_Year__c</fullName>
    <label>Marketing &amp; Promotion (SAR/Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>