force-app/main/default/objects/Opportunity/fields/Minimum_Acceptable_Rate_Sqm_SR_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Acceptable_Rate_Sqm_SR_Sqm__c</fullName>
    <label>Minimum Acceptable Rate/Sqm (SAR/Sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>