force-app/main/default/objects/Opportunity/fields/Minimum_Acceptable_Rent__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Acceptable_Rent__c</fullName>
    <label>Minimum Acceptable Rent (SAR/Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>