force-app/main/default/objects/Opportunity/fields/Offer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Approval_Status__c</fullName>
    <label>Offer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>