force-app/main/default/objects/Opportunity/fields/Offer_Valid_till__c.field-meta.xml
<CustomField>
    <fullName>Offer_Valid_till__c</fullName>
    <label>Offer Valid till</label>
    <type>Date</type>
</CustomField>