force-app/main/default/objects/Opportunity/fields/Other_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Other_Agent_Commission__c</fullName>
    <defaultValue>00.07</defaultValue>
    <label>Other Agent Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>