force-app/main/default/objects/Opportunity/fields/Other_Agents__c.field-meta.xml
<CustomField>
    <fullName>Other_Agents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Agents</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>