force-app/main/default/objects/Opportunity/fields/Other_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Other_Area_Sqm__c</fullName>
    <label>Other Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>