force-app/main/default/objects/Opportunity/fields/Other_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Amount__c</fullName>
    <label>Other Charges Amount</label>
    <summarizedField>Other_Charges__c.Amount__c</summarizedField>
    <summaryForeignKey>Other_Charges__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>