force-app/main/default/objects/Opportunity/fields/Other_Charges_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Area_Sqm__c</fullName>
    <label>Other Charges Area Sqm</label>
    <summarizedField>Other_Charges__c.Area_Sqm__c</summarizedField>
    <summaryForeignKey>Other_Charges__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>