force-app/main/default/objects/Opportunity/fields/Payment_Schedule_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Amount__c</fullName>
    <label>Payment Schedule Amount</label>
    <summarizedField>Payment_Schedule__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment_Schedule__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>