force-app/main/default/objects/Opportunity/fields/Payment_Terms_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Month__c</fullName>
    <label>Payment Terms (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>