force-app/main/default/objects/Opportunity/fields/PaymentPlan__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>