force-app/main/default/objects/Opportunity/fields/PreLaunchPrice__c.field-meta.xml
<CustomField>
    <fullName>PreLaunchPrice__c</fullName>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>