force-app/main/default/objects/Opportunity/fields/Price_Sqm_SAR_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_Sqm_SAR_Unit__c</fullName>
    <label>Unit Rate per Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>