force-app/main/default/objects/Opportunity/fields/Quarter_Rent_SR_In_favor_of__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Rent_SR_In_favor_of__c</fullName>
    <formula>Total_Annual_Rent__c/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Rent (SR In favor of )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>