force-app/main/default/objects/Opportunity/fields/Rate_per_Sqm_SR_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_Sqm_SR_Sqm__c</fullName>
    <label>Rate per Sqm (SR/Sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>