force-app/main/default/objects/Opportunity/fields/RatePerSqmSRSqmAtCreation__c.field-meta.xml
<CustomField>
    <fullName>RatePerSqmSRSqmAtCreation__c</fullName>
    <label>Rate per Sqm (SR/Sqm) at Creation</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>