force-app/main/default/objects/Opportunity/fields/Refundable_Security_Deposit_SR__c.field-meta.xml
<CustomField>
    <fullName>Refundable_Security_Deposit_SR__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Refundable Security Deposit (SR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>