force-app/main/default/objects/Opportunity/fields/Rent_Payment_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Payment_Commencement_Date__c</fullName>
    <formula>Lease_Commencement_Date__c +90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>90 Days From The Lease Commencement Date</inlineHelpText>
    <label>Rent Payment Commencement Date</label>
    <type>Date</type>
</CustomField>