force-app/main/default/objects/Opportunity/fields/Request_to_Delete_a_Deal__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Delete_a_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request to Delete a Deal</label>
    <type>Checkbox</type>
</CustomField>