force-app/main/default/objects/Opportunity/fields/Service_Area_SAR__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_SAR__c</fullName>
    <label>Service Area SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>