force-app/main/default/objects/Opportunity/fields/Service_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Sqm__c</fullName>
    <label>Service Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>