force-app/main/default/objects/Opportunity/fields/Service_Charges_SR_Year__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges_SR_Year__c</fullName>
    <inlineHelpText>Will Be Decided Later and Shall not Exeed Market Rate</inlineHelpText>
    <label>Service Charges (SR/Year)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>