force-app/main/default/objects/Opportunity/fields/Services_During_Shopfitting__c.field-meta.xml
<CustomField>
    <fullName>Services_During_Shopfitting__c</fullName>
    <inlineHelpText>Payable Once</inlineHelpText>
    <label>Services During Shopfitting (SR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>