force-app/main/default/objects/Opportunity/fields/Shopfitting_Guarantee_SR__c.field-meta.xml
<CustomField>
    <fullName>Shopfitting_Guarantee_SR__c</fullName>
    <formula>Area_Sqm__c *50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This amount will not be encashed if shopfitting work is completed on time ( Area (Sqm)*50 )</inlineHelpText>
    <label>Shopfitting Guarantee (SR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>